recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:3: error: illegal start of simple pattern
for(Int i <- 0 to 3 by 1)
          ^FourSquare:15: error: '<-' expected but '}' found.
}
^